# biab

./: .gitignore  ChangeLog  Makefile.in  README  acinclude.m4  aclocal.m4  autobuild.sh  biab.sh.in  configure  configure.ac  configure.in  libtool  pyenv-build.sh  setup.py.in
biab/: Makefile  __init__.py  ast.py  lex.py  main.py  meta.py  nosib.py  parse.py.in  prof.py  program.py  scanopt.py  token.py
test/: ANSI-C-grammar.bb  Makefile  desk.bb  desk1.bb
tests/: ANSI-C-grammar.py  Makefile  desk.bb  desk.py  desk1.bb  desk1.py  meta.bb  meta.py  tab.c  test_basic.py
tools/: ppp.py
